# inference

./: .depth-viz-why.md.kate-swp  .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  clippy.toml  deny.toml  depth-raw-output.md  depth-viz-why.md  plan.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  cla.yml  format.yml  gpu.yml  npm-publish.yml  publish.yml
crates/web/: Cargo.toml
crates/web/src/: lib.rs  onnx_meta.rs  payload.rs  tflite_meta.rs
depth-newmask/: camera-test_prediction.txt
docker/: Dockerfile-cli  Dockerfile-server
docker/server/: Cargo.toml  Dockerfile  README.md  entrypoint.sh  runner.sh
docker/server/src/: main.rs
docs/: CUDA.md  README.md
examples/: README.md  annotate.rs  basic.rs  config.rs  save_prediction.rs  tasks.rs
npm/: .gitignore  README.md  package.json
npm/example/: index.html
npm/src/: index.ts
src/: annotate.rs  batch.rs  color.rs  colors.rs  cuda_inference.rs  device.rs  download.rs  error.rs  inference.rs  io.rs  lib.rs  logging.rs  main.rs  metadata.rs  model.rs  par.rs  parallel.rs  postprocessing.rs  preprocessing.rs  results.rs  source.rs  task.rs  utils.rs
src/cli/: args.rs  logging.rs  mod.rs  predict.rs
src/visualizer/: color.rs  mod.rs  skeleton.rs  viewer.rs
tests/: README.md  integration_test.rs
web/: .gitignore  README.md  package-lock.json  package.json  serve.mjs  tsconfig.json
web/src/: index.ts
