# Ultralytics 🚀 AGPL-3.0 License - https://ultralytics.com/license

[package]
name = "ultralytics-inference"
version = "0.0.8"
edition = "2024"
authors = [
    "Glenn Jocher <glenn.jocher@ultralytics.com>",
    "Onuralp Sezer <onuralp@ultralytics.com>",
]
description = "Ultralytics YOLO inference library and CLI for Rust"
license = "AGPL-3.0"
repository = "https://github.com/ultralytics/inference"
documentation = "https://docs.rs/ultralytics-inference"
homepage = "https://www.ultralytics.com"
readme = "README.md"
keywords = ["yolo", "ultralytics", "inference", "computer-vision", "ml"]
categories = ["computer-vision", "science", "command-line-interface", "wasm"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"

[lib]
name = "ultralytics_inference"
path = "src/lib.rs"

[[bin]]
name = "ultralytics-inference"
path = "src/main.rs"

[dependencies]
# Core - Image loading and processing
image = "^0.25"
jpeg-decoder = "^0.3"
fast_image_resize = { version = "^5.5", features = ["image", "rayon"] }

# SIMD for fast preprocessing
wide = "^1.1"

# LRU cache for preprocessing LUT
lru = "^0.16"

# Numerical computing (must match ort's ndarray version 0.17)
ndarray = { version = "^0.17", features = ["rayon"] }

# ONNX Runtime 1.23 - using latest from GitHub for best performance
ort = { git = "https://github.com/pykeio/ort.git", rev = "2de34065983a5c034f5afcc072b23b99479f465b", default-features = false, features = [
    "std",
    "ndarray",
    "download-binaries",
    "copy-dylibs",
    "half",
    "tls-native",
] }

# Core - FP16 support (required by ort's half feature)
half = { version = "^2.4", features = ["num-traits"] }
ureq = "^3.1.4"
dirs = "^6.0"
rayon = "^1.10"
bytemuck = { version = "^1.21", features = ["derive"] }

# Core - CLI arguments parsing
clap = { version = "^4.5.56", features = ["derive"] }
colored = "^3.0.0"

# Optional - Visualization and Video support
minifb = { version = "^0.28.0", optional = true }
video-rs = { version = "^0.10.5", features = ["ndarray"], optional = true }

# Optional - Image annotation (for --save feature)
imageproc = { version = "^0.26", optional = true }
ab_glyph = { version = "^0.2", optional = true }

# Optional - Video support
ffmpeg-next = { version = "^7.1.0", optional = true }
ffmpeg-sys-next = { version = "^7.1.3", optional = true }
ndarray_0_16 = { package = "ndarray", version = "0.16", optional = true }

[features]
default = ["annotate", "visualize"]

# Real-time visualization
visualize = ["minifb"]

# Video support
video = ["video-rs", "ffmpeg-next", "ffmpeg-sys-next", "ndarray_0_16"]

# Image annotation support (for --save feature in CLI)
annotate = ["imageproc", "ab_glyph"]

# NVIDIA GPU acceleration
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]

# AMD GPU acceleration
rocm = ["ort/rocm"]

# Intel acceleration
openvino = ["ort/openvino"]
onednn = ["ort/onednn"]

# DirectML (Windows)
directml = ["ort/directml"]

# Mobile/Embedded
nnapi = ["ort/nnapi"]   # Android
coreml = ["ort/coreml"] # iOS/macOS
qnn = ["ort/qnn"]       # Qualcomm

# Additional accelerators
xnnpack = ["ort/xnnpack"]
acl = ["ort/acl"]           # ARM Compute Library
armnn = ["ort/armnn"]       # ARM NN
tvm = ["ort/tvm"]           # Apache TVM
migraphx = ["ort/migraphx"] # AMD MIGraphX
rknpu = ["ort/rknpu"]       # Rockchip NPU
vitis = ["ort/vitis"]       # Xilinx Vitis AI
cann = ["ort/cann"]         # Huawei CANN
webgpu = ["ort/webgpu"]     # WebGPU
azure = ["ort/azure"]       # Azure

# Convenience feature groups
nvidia = ["cuda", "tensorrt"]
amd = ["rocm", "migraphx"]
intel = ["openvino", "onednn"]
mobile = ["nnapi", "coreml", "qnn"]
all = ["annotate", "video"]

[dev-dependencies]
# Testing dependencies
serial_test = "3"
tempfile = "3"


[profile.dev]
opt-level = 0
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
