# Ultralytics 🚀 AGPL-3.0 License - https://ultralytics.com/license

[package]
name = "ultralytics-inference-web"
version = "0.0.27"
edition = "2024"
rust-version = "1.89"
description = "Browser/WebAssembly bindings for ultralytics-inference (WebGPU via ort-web)"
license = "AGPL-3.0"
repository = "https://github.com/ultralytics/inference"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints.rust]
unsafe_code = "warn"
missing_docs = "warn"

[dependencies]
# Reuse the wasm-safe core pipeline (preprocessing, postprocessing, results,
# metadata, task). `default-features = false` drops the native backend modules.
ultralytics-inference = { path = "../..", default-features = false }

# Everything below is only ever compiled for the browser. Keeping these under a
# wasm32 target table means a host build of the workspace never pulls ort with
# `alternative-backend` (which would clash with the native crate's
# `download-binaries` ort under Cargo feature unification) and never tries to
# build the browser-only crates for the host.
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Same ONNX Runtime version as the native crate (ort-web 0.2.1+1.24 pins it),
# but with `alternative-backend` so ort bridges to ort-web instead of linking
# the native runtime.
ort = { version = "=2.0.0-rc.12", default-features = false, features = [
    "std",
    "ndarray",
    "alternative-backend",
    "half",
] }
ort-web = "0.2.1"
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.6"
# Read the `metadata.json` embedded in a single-file `.tflite` (see tflite_meta).
serde_json = "1"
miniz_oxide = "0.9"
console_error_panic_hook = "0.1"
ndarray = "0.17"
half = "2.7"
web-sys = { version = "0.3", features = ["Window", "Performance"] }
# Decode JPEG/PNG image bytes handed in from JavaScript.
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

[package.metadata.wasm-pack.profile.release]
# Smaller, faster-to-load wasm. The bindings pull in SIMD and reference-type
# instructions, so wasm-opt must be told to accept those features (otherwise it
# fails validation on the v128 ops).
wasm-opt = [
    "-O4",
    "--enable-simd",
    "--enable-reference-types",
    "--enable-bulk-memory",
    "--enable-mutable-globals",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext",
]
